Fixed mobile spacing issue

--- a/resources/assets/sass/helpers/helper.scss
+++ b/resources/assets/sass/helpers/helper.scss
@@ -69,3 +69,11 @@
     padding-top: 50px;
     padding-bottom: 50px;
 }
+.padding-top
+{
+    padding-top: 50px;
+}
+.padding-bottom
+{
+    padding-bottom: 50px;
+}
